feat: Models, NuGet, Migrations 34:30

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConncection": "Server=.;Database=bankdb;trusted_connection=true;Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
