--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,7 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
@@ -355,6 +356,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+Migrations/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
